[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Team IO-Aero", email = "info@io-aero.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "dynaconf",
    "PyYAML",
    "tomli",
    "tomli-w",
]
description = "Template for a Library Repository"
keywords = [
    "library",
]
maintainers = [
    { name = "Team IO-Aero", email = "info@io-aero.ch" },
]
name = "iotemplatelib"
readme = "README.md"
requires-python = ">=3.10"
version = "1.3.33"

[project.urls]
"Bug Tracker" = "https://github.com/io-aero/io-template-lib/issues"
Documentation = "https://io-aero.github.io/io-template-lib/"
Homepage = "https://github.com/io-aero/io-template-lib"
"Release History" = "https://io-aero.github.io/io-template-lib/release_history/"
"Release Notes" = "https://io-aero.github.io/io-template-lib/release_notes/"
Source = "https://github.com/io-aero/io-template-lib/tree/main/iotemplatelib"

[tool.bandit]

[tool.docformatter]
black = true
blank = true
recursive = true
wrap-descriptions = 100
wrap-summaries = 100

[tool.pytest.ini_options]
console_output_style = "count"
markers = [
    "issue",
]
norecursedirs = "./tests/helpers"
pythonpath = "./iotemplatelib/"
testpaths = "./tests/"

[tool.ruff]
exclude = [
    ".git",
    ".history",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    "build",
    "iotemplatelib.egg-info",
]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "C408",
    "D211",
    "D213",
    "PGH003",
    "S101",
    "S603",
]
fixable = [
    "ALL",
]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.setuptools]
packages = [
    "iotemplatelib",
]

[tool.setuptools.package-data]
iotemplatelib = [
    "*.pyi",
    "py.typed",
]

[tool.vulture]
make_whitelist = true
min_confidence = 100
