[project]
authors = [
    { name = "Team IO-Aero", email = "info@io-aero.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "dynaconf",
    "PyYAML",
    "tomli",
    "tomli-w",
]
description = "Template for a Library Repository"
keywords = [
    "library",
]
maintainers = [
    { name = "Team IO-Aero", email = "info@io-aero.ch" },
]
name = "iotemplatelib"
readme = "README.md"
requires-python = ">=3.10"
version = "2.0.6"

[project.urls]
"Bug Tracker" = "https://github.com/io-aero/io-template-lib/issues"
Documentation = "https://io-aero.github.io/io-template-lib/"
Homepage = "https://github.com/io-aero/io-template-lib"
"Release Notes" = "https://io-aero.github.io/io-template-lib/release_notes/"
Source = "https://github.com/io-aero/io-template-lib/tree/main/iotemplatelib"

[tool.bandit]
skips = [
    "B101",
    "B404",
    "B603",
]

[tool.docformatter]
black = true
blank = true
recursive = true
wrap-descriptions = 100
wrap-summaries = 100

[tool.pytest.ini_options]
console_output_style = "count"
markers = [
    "issue",
]
norecursedirs = "./tests/helpers"
pythonpath = "./iotemplatelib/"
testpaths = "./tests/"

[tool.ruff]
exclude = [
    ".git",
    ".history",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    "build",
    "iotemplatelib.egg-info",
    "temp",
]
line-length = 100
indent-width = 4
target-version = "py313"
extend-ignore = [
    "E501",
]

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "C408",
    "D211",
    "D213",
    "PGH003",
    "S101",
    "S603",
]
fixable = [
    "ALL",
]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.vulture]
make_whitelist = true
min_confidence = 100
